--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,10 +5,11 @@ body
 .box
 {
     color:white;
-    font-size:90px;
+    font-size:100px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
-    padding:10px;
+    padding:11px;
+    width:31.66666%;
  }
 .box1
 {
@@ -55,5 +56,5 @@ body
     display: flex;
     border:10px solid goldenrod;
     min-height: 97vh;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
