--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -10,6 +10,7 @@ body
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
     padding:11px;
     width:31.66666%;
+    flex:1;
  }
 .box1
 {
@@ -18,6 +19,7 @@ body
 .box2
 {
     background-color: red;
+    order :2;
 }
 .box3
 {
@@ -30,6 +32,7 @@ body
 .box5
 {
     background-color:blue;
+    order:3;
 }
 .box6
 {
@@ -54,7 +57,5 @@ body
 .container
 {
     display: flex;
-    border:10px solid goldenrod;
-    min-height: 97vh;
-    flex-wrap: wrap;
+
 }
