--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,12 +5,11 @@ body
 .box
 {
     color:white;
-    font-size:100px;
+    font-size:30px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
-    padding:11px;
-    width:31.66666%;
-    flex:1;
+    padding:10px;
+
  }
 .box1
 {
@@ -19,7 +18,6 @@ body
 .box2
 {
     background-color: red;
-    order :2;
 }
 .box3
 {
@@ -32,7 +30,7 @@ body
 .box5
 {
     background-color:blue;
-    order:3;
+    
 }
 .box6
 {
@@ -57,5 +55,7 @@ body
 .container
 {
     display: flex;
+    border:10px solid mistyrose;
+    justify-content: space-between
 
 }
