--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,7 +5,7 @@ body
 .box
 {
     color:white;
-    font-size:30px;
+    font-size:90px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
     padding:10px;
@@ -14,18 +14,23 @@ body
 .box1
 {
     background-color: rgb(47, 255, 57);
+    font-size:100px;
 }
 .box2
 {
     background-color: red;
+    font-size:130px;
 }
 .box3
 {
     background-color: rgba(0, 247, 255, 0.432);
+    font-size:160px;
 }
 .box4
 {
     background-color: palevioletred;
+    font-size:190px;
+
 }
 .box5
 {
@@ -55,7 +60,8 @@ body
 .container
 {
     display: flex;
-    border:10px solid mistyrose;
-    justify-content: space-between
+    order:10px solid mistyrose;
+    align-items: baseline;
+    min-height:100vh; 
 
 }
