--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,37 +5,39 @@ body
 .box
 {
     color:white;
-    font-size:90px;
+    font-size:50px;
+    width:31.6666666666%;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
-    padding:10px;
+    padding:11px;
 
+   
  }
 .box1
 {
     background-color: rgb(47, 255, 57);
-    font-size:100px;
+
 }
 .box2
 {
     background-color: red;
-    font-size:130px;
+    
 }
 .box3
 {
     background-color: rgba(0, 247, 255, 0.432);
-    font-size:160px;
+    
+   
 }
 .box4
 {
     background-color: palevioletred;
-    font-size:190px;
-
+    
 }
 .box5
 {
     background-color:blue;
-    
+
 }
 .box6
 {
@@ -44,6 +46,7 @@ body
 .box7
 {
     background-color: purple;
+   
 }
 .box8
 {
@@ -60,8 +63,9 @@ body
 .container
 {
     display: flex;
-    order:10px solid mistyrose;
-    align-items: baseline;
+    border:10px solid mistyrose;
     min-height:100vh; 
+    flex-wrap: wrap;
+    align-content: flex-end;
 
 }
