--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -6,10 +6,10 @@ body
 {
     color:white;
     font-size:50px;
-    width:31.6666666666%;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
     padding:11px;
+    flex:1;
 
    
  }
@@ -21,7 +21,7 @@ body
 .box2
 {
     background-color: red;
-    padding-bottom: 0px;
+    flex:2;
     
 }
 .box3
@@ -56,8 +56,7 @@ body
 .box9
 {
     background-color: grey;
-    padding-bottom: 50px;
-    align-self: flex-end;
+
 }
 .box10
 {
@@ -67,7 +66,4 @@ body
 {
     display: flex;
     border:10px solid mistyrose;
-    min-height:100vh; 
-    align-items: flex-start;
-
 }
