--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -8,62 +8,28 @@ body
     font-size:50px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0,0,0,1);
-    padding:11px;
-    flex:1;
 
    
  }
 .box1
 {
     background-color: rgb(47, 255, 57);
+    flex-basis: 400px;
+    flex-grow: 10;
+    flex-shrink: 5;
 
 }
 .box2
 {
     background-color: red;
-    flex:2;
-    
-}
-.box3
-{
-    background-color: rgba(0, 247, 255, 0.432);
-    
+    flex-basis: 400px;
+    flex-grow: 1;
+    flex-shrink: 1;
    
-}
-.box4
-{
-    background-color: palevioletred;
     
 }
-.box5
-{
-    background-color:blue;
 
-}
-.box6
-{
-    background-color: orange;
-}
-.box7
-{
-    background-color: purple;
-   
-}
-.box8
-{
-    background-color:yellow;
-}
-.box9
-{
-    background-color: grey;
-
-}
-.box10
-{
-    background-color: rgb(188, 143, 160);
-}
 .container
 {
     display: flex;
-    border:10px solid mistyrose;
 }
