--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -7,60 +7,28 @@ body
     color:white;
     font-size:50px;
     text-align: center;
-    flex-basis: 250px;
-    flex-grow: 1;
 
    
  }
 .box1
 {
     background-color: rgb(47, 255, 57);
+    flex:10 5 400px;
     
 
 }
 .box2
 {
     background-color: red;
+    flex:1 1 400px;
    
-    
-   
-    
-}
-.box3
-{
-    background-color: rgb(255, 166, 0);
-    flex-grow: 5;
-   
-    
-}
-.box4
-{
-    background-color: rgb(251, 255, 0);
-    flex-basis:100px;
-    
-   
-    
-}
-.box5
-{
-    background-color:rgba(0, 4, 255, 0.952);
-    
-   
-    
-}
-.box6
-{
-    background-color:rgb(238, 170, 193);
     
    
     
 }
 
+
 .container
 {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 100vh;
-    border: 10px solid salmon;
 }
